deploy/job-queue/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: job-queue-route
  labels:
    app: job-queue
    component: api
spec:
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: https
  to:
    kind: Service
    name: job-queue-service
    weight: 100
  wildcardPolicy: None
